--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li  data-ns-test value="Shopping List" > Scooty </li>
+		<li  data-ns-test value="Shopping List" > Apple watch </li>
+		<li  data-ns-test value="Shopping List" > Laptop </li>
+	</ol>
+
+	<ul>
+		<li data-ns-test value="holidayList" > Paris</li>
+		<li data-ns-test value="holidayList" > Dubai</li>
+		<li data-ns-test value="holidayList" > Kedarnath</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
