Both list Added

--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol>
-		<li  data-ns-test value="Shopping List" > Scooty </li>
-		<li  data-ns-test value="Shopping List" > Apple watch </li>
-		<li  data-ns-test value="Shopping List" > Laptop </li>
+	<ol> 
+		<li  data-ns-test value="shoppingList" > Scooty </li>
+		<li  data-ns-test value="shoppingList" > Apple watch </li>
+		<li  data-ns-test value="shoppingList" > Laptop </li>
 	</ol>
 
 	<ul>
