--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol> 
-		<li  data-ns-test value="shoppingList" > Scooty </li>
-		<li  data-ns-test value="shoppingList" > Apple watch </li>
-		<li  data-ns-test value="shoppingList" > Laptop </li>
+		<li  data-ns-test ="shoppingList" > Scooty </li>
+		<li  data-ns-test ="shoppingList" > Apple watch </li>
+		<li  data-ns-test ="shoppingList" > Laptop </li>
 	</ol>
 
 	<ul>
-		<li data-ns-test value="holidayList" > Paris</li>
-		<li data-ns-test value="holidayList" > Dubai</li>
-		<li data-ns-test value="holidayList" > Kedarnath</li>
+		<li data-ns-test ="holidayList" > Paris</li>
+		<li data-ns-test ="holidayList" > Dubai</li>
+		<li data-ns-test ="holidayList" > Kedarnath</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
